<resources>
    <string name="app_name">Runner</string>

    <!--toolbar Drawer-->
    <string name="toolbar_drawer_open">打开抽屉</string>
    <string name="toolbar_drawer_close">关闭抽屉</string>
    <!--navigationView menu-->
    <string name="menu_run">运动主页</string>
    <string name="menu_goal">每日目标</string>
    <string name="menu_record">运动记录</string>
    <string name="menu_news">运动资讯</string>
    <string name="menu_rank">排行榜</string>
    <string name="menu_setting">个人设置</string>
    <string name="menu_remind">提醒功能</string>
    <string name="menu_share">分享</string>
    <string name="menu_timing">计时功能</string>
    <string name="menu_suggest">意见反馈</string>
    <string name="menu_sub_title">其他</string>

    <!--navigation Header-->
    <string name="navi_header_tv">未登录</string>

    <!--fragment run-->
    <string name="button_run_tv">start run</string>
    <string name="arcProgressBar_bottom_text">目标：5000</string>
    <string name="arcProgressBar_top_text">今日已跑步数</string>


    <!--network Receiver 的toast-->
    <string name="network_success">网络已连接</string>
    <string name="network_failure">您已进入没有网络的异次元</string>

    <!--toast-->
    <string name="toast_quit">再点一次，退出程序</string>
    <string name="toast_gps">请打开Gps，在开始记录！</string>

    <!--dialog permission -->
    <string name="dialog_permission_msg">权限获取失败,需要手动打开,应用程序信息,授权相应权限!</string>
    <string name="dialog_permission_title">注意</string>

    <!--btn-->
    <string name="btn_start">开始</string>
    <string name="btn_stop">停止</string>

    <!--menu-->
    <string name="menu_share_qq">QQ</string>
    <string name="menu_share_weixni">微信</string>
    <string name="menu_share_weixni_fc">朋友圈</string>
    <!--framgment goal-->
    <string name="tv_goal">今日步数：</string>
    <string name="snack_error">设置失败，步数要大于5000！</string>
    <!--login-->
    <string name="login_phone_hint">请输入您的手机号码</string>
    <string name="login_pw_hint">登录密码</string>
    <string name="login_btn">登陆</string>
    <string name="login_register">还没有账号？快去注册吧！</string>
    <string name="login_find_pw">忘记密码？</string>
    <!--register-->
    <string name="register_btn">注册</string>
    <string name="register_username">请输入您的用户名</string>
    <string name="register_password">请输入您的密码</string>
    <string name="register_password_confirm">请再次输入您的密码</string>
    <!--find pw-->
    <string name="find_pw_username">请输入您的手机号</string>
    <string name="find_pw_password">请输入验证码</string>
    <string name="find_pw_new_password_confirm">请输入您的新密码</string>
    <string name="find_pw_btn">确认</string>
</resources>
