<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/run"
            android:checked="true"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_run" />
        <item
            android:id="@+id/goal"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_goal" />
        <item
            android:id="@+id/record"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_record" />
        <item
            android:id="@+id/news"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/rank"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_rank" />
    </group>
    <item android:title="@string/menu_sub_title">
        <menu>
            <item
                android:id="@+id/setting"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/remind"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/menu_remind" />
            <item
                android:id="@+id/shard"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/timing"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/menu_timing" />
            <item
                android:id="@+id/suggest"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/menu_suggest" />
        </menu>
    </item>
</menu>