<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinate_find"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_find_ps">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pw_layout_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:hint="@string/find_pw_password"
            android:textColorHint="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pw_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_find_sms_code"
            android:text="验证码"
            android:textColor="@color/white"
            android:background="@drawable/btn_small"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_width="50dp"
            android:layout_height="40dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobile_layout_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/pw_layout_find"
            android:hint="@string/find_pw_username"
            android:textColorHint="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mobile_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pw_new_layout_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pw_layout_find"
            android:hint="@string/find_pw_new_password_confirm"
            android:textColorHint="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pw_new_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_find"
            style="@style/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pw_new_layout_find"
            android:text="@string/find_pw_btn" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>